# autocomplete-cities

./: Dockerfile  README.md  pyproject.toml
autocomplete_cities/: app.py  middleware.py
autocomplete_cities/api/v1_0/: api.py  schemas.py
autocomplete_cities/data/: schemas.py  service.py
autocomplete_cities/suggestion/: service.py
autocomplete_cities/util/: location_similarity.py  string_similarity.py
tests/data/: test_data_service.py
